--- a/main.css
+++ b/main.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
 }
 
-
 a, h1 {
     color: #ff4420;
     font-size: 22px;
@@ -25,7 +24,6 @@ nav {
     margin: 1px;
     padding: 1px;
 }
-
 
 input, textarea {
     font-size: 19px;
@@ -55,9 +53,10 @@ a:hover {
 
 }
 
-.luniqueUl{
+.luniqueUl {
     display: inline-flex;
     list-style: none;
+    flex-wrap: wrap;
 }
 
 .lightrope-wrapper {
@@ -68,11 +67,11 @@ img {
     width: 100%;
 }
 
-.article{
+.article {
     padding: 4px;
     width: 350px;
     margin: 20px;
     border-style: solid;
-    border-color: rgba(46,24,35,0.7);
+    border-color: rgba(46, 24, 35, 0.7);
 }
 
